--- a/V1/index.html
+++ b/V1/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <!-- Course: CIS 155
+            Assignment: wbsite V1
+            Purpose: website about Jacob Collier
+            Author: Garret O'Brien
+            Date: 5-8-20
+            Filename: index.html-->
         <meta charset="UTF-8">
-        <title>Github Fun</title>
+        <title>Jacob Collier</title>
+         <!-- M1LO8 Demonstrate the use of external style sheets
+        I am using styles.css below -->
+        <link href="styles.css" rel="stylesheet"/>
+        <!--M1LO6 Demonstrate the use of basic HTML tags to create a simple Web page 
+            (HTML, this item should be specified once, describing how the file it is in meets 
+            this outcome)
+        below I have specified a header tag for my website-->
+    <header>Jacob Collier</header>
     </head>
     <body>
-    <!--stuff goes here -->-->
+<header>
+    <nav>
+        <!--M1LO12 Create navigation using unordered lists
+            below I am using an unordered list as my main navigation-->
+        <ul>
+         <li><a class="active" href="index.html">Home</a></li>
+         <li><a href="about.html">About</a></li>
+         <li><a href="accomplishments.html">Accomplishments</a></li>
+         <li><a href="aboutwebsite.html">About This Website</a></li>
+         </ul>
+    </nav>
+</header>
+
+<h2>Welcome</h2>
+<p>
+    <!--M1LO9 Demonstrate the use of inline images 
+    I have used an image search atribute to display san image-->
+    <img src="grammy.jpeg"class="center" />
+     </p>
+   
+     <body>
+<p2>This website is about jacob collier. Jacob is a multi grammy awward winning musician with years of experiance under his belt. dispite being only 25 jacob has achived more than others have in their entire lifetime. this website will outline jacobs accomplishments as well as his personal history.  </p2>
     </body>
+
+<footer>
+    <!-- M2LO4 Demonstrate external, embedded, and inline styles 
+     -->
+    <p style="font-size: 0.8em;">This website is unofilliated with Jacob collier and Hanjanga records.</p>
+</footer>
+</body>
 </html>
 
 
