--- a/V1/aboutjacob.html
+++ b/V1/aboutjacob.html
@@ -3,23 +3,23 @@
     <head>
         <!-- Course: CIS 155
             Assignment: wbsite V1
-            Purpose: website about Jacob Colliers accomplishments
+            Purpose: website about Jacob Colliers
             Author: Garret O'Brien
             Date: 5-8-20
             Filename: index.html-->
         <meta charset="UTF-8">
-        <title>Jacob colliers accomplishments</title>
-          <!-- M1LO8 Demonstrate the use of external style sheets
+        <title>About Jacob collier</title>
+        <!-- M1LO8 Demonstrate the use of external style sheets
         I am using styles.css below -->
         <link href="styles.css" rel="stylesheet"/>
     </head>
     <header>
-        <header>Accomplishments</header>
+        <header>About</header>
         <nav>
             <ul>
              <li><a href="index.html">Home</a></li>
-             <li><a href="aboutjacob.html">About</a></li>
-             <li><a class="active" href="accomplishments.html">Accomplishments</a></li>
+             <li><a class="active" href="aboutjacob.html">About</a></li>
+             <li><a href="accomplishments.html">Accomplishments</a></li>
              <li><a href="about.html">About This Website</a></li>
              </ul>
         </nav>
