--- a/V1/about.html
+++ b/V1/about.html
@@ -32,7 +32,7 @@
     </nav>
 </header>
 
-<p>V1: all web pages have functioning navigation menus. </p>
+<p>V1: all web pages have functioning navigation menus. I've added about, accomplishments, and about this website pages as well as custom colors an images </p>
 <p>V2:</p>
 <p>V3:</p>
 <p>V4:</p>
