--- a/V1/index.html
+++ b/V1/index.html
@@ -46,7 +46,7 @@
      </p>
    
      <body>
-<p2>This website is about jacob collier. Jacob is a multi grammy awward winning musician with years of experiance under his belt. dispite being only 25 jacob has achived more than others have in their entire lifetime. this website will outline jacobs accomplishments as well as his personal history.  </p2>
+<p2>This website is about jacob collier. Jacob is a multi grammy award winning musician with years of experiance under his belt. dispite being only 25 jacob has achived more than others have in their entire lifetime. this website will outline jacobs accomplishments as well as his personal history.  </p2>
     </body>
 
 <footer>
