--- a/V1/about.html
+++ b/V1/about.html
@@ -38,3 +38,10 @@
 <p>V4:</p>
 
 </body>
+
+<footer>
+
+    <!-- M2LO4 Demonstrate external, embedded, and inline styles 
+     I've used an inline style to ajust the font size of my footer text-->
+    <p style="font-size: 0.8em;">This website is unofilliated with Jacob collier and Hanjanga records.</p>
+</footer>
