--- a/V2/about.html
+++ b/V2/about.html
@@ -33,7 +33,7 @@
 </header>
 
 <p>V1: all web pages have functioning navigation menus. I've added about, accomplishments, and about this website pages as well as custom colors an images. </p>
-<p>V2:</p>
+<p>V2:added content to albums page, as well as borders to album covers. added content to accomplishments page. </p>
 <p>V3:</p>
 <p>V4:</p>
 
@@ -43,5 +43,5 @@
 
     <!-- M2LO4 Demonstrate external, embedded, and inline styles 
      I've used an inline style to ajust the font size of my footer text-->
-    <p style="font-size: 0.8em;">This website is unofilliated with Jacob collier and Hanjanga records.</p>
+    <p style="font-size: 1em;">This website is unofilliated with Jacob collier and Hanjanga records.</p>
 </footer>
