--- a/V2/index.html
+++ b/V2/index.html
@@ -22,14 +22,14 @@
     </head>
     <body>
 <header>
-    <nav>
+    <nav id="top" class="horizontal">
         <!--M1LO12 Create navigation using unordered lists
             below I am using an unordered list as my main navigation-->
        
             <!--M1LO13 Demonstrate using 3 types of hyperlinks: site navigation, 
             targeted location using ids, and external
         below, I am demonstrating internal site navigation with my navigation bar-->
-        <ul>
+        <ul class="row">
          <li><a class="active" href="index.html">Home</a></li>
          <li><a href="albums.html">Albums</a></li>
          <li><a href="accomplishments.html">Accomplishments</a></li>
@@ -53,7 +53,7 @@
     
     <!-- M2LO4 Demonstrate external, embedded, and inline styles 
      I've used an inline style to ajust the font size of my footer text-->
-    <p style="font-size: 0.8em;">This website is unofilliated with Jacob collier and Hanjanga records.</p>
+    <p style="font-size: 1em;">This website is unofilliated with Jacob collier and Hanjanga records.</p>
 </footer>
 </body>
 </html>
