--- a/V2/albums.html
+++ b/V2/albums.html
@@ -56,7 +56,7 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="https://open.spotify.com/album/1pwXpbHvWEMH4nCAlhlwf7">
+    <a target="_blank" href="https://open.spotify.com/album/1pwXpbHvWEMH4nCAlhlwf7"></a>
       <img src="djesse3.jpeg" alt="Djesse Vol.3" width="600" height="600">
     </a>
   </div>
@@ -79,11 +79,11 @@
 
 
     </body>
-
+    <div class="row"></div>
 
     <footer>
     
         <!-- M2LO4 Demonstrate external, embedded, and inline styles 
          I've used an inline style to ajust the font size of my footer text-->
-        <p style="font-size: 0.8em;">This website is unofilliated with Jacob collier and Hanjanga records.</p>
+        <p style="font-size: 1em;">This website is unofilliated with Jacob collier and Hanjanga records.</p>
     </footer>
