--- a/V4/about.html
+++ b/V4/about.html
@@ -13,7 +13,7 @@
         I am using styles.css below -->
         <link href="styles.css" rel="stylesheet"/>
     </head>
-    
+
     <body>
 <header>
      <!--M1LO6 Demonstrate the use of basic HTML tags to create a simple Web page 
@@ -35,8 +35,8 @@
 
 <p>V1: all web pages have functioning navigation menus. I've added about, accomplishments, and about this website pages as well as custom colors an images. </p>
 <p>V2:added content to albums page, as well as borders to album covers. added content to accomplishments page. </p>
-<p>V3:</p>
-<p>V4:</p>
+<p>V3: minor adjustments to syntax of code.</p>
+<p>V4: refined accomplishments and albms page, added html5 video</p>
 
 </body>
 
