--- a/V4/about.html
+++ b/V4/about.html
@@ -38,8 +38,9 @@
 <p>V3: minor adjustments to syntax of code.</p>
 <p>V4: refined accomplishments and albms page, added html5 video</p>
 
+<img src="silly.jpg"class="center" />
 </body>
-
+<div style="padding:25px;">
 <footer>
 
     <!-- M2LO4 Demonstrate external, embedded, and inline styles 
