--- a/V4/index.html
+++ b/V4/index.html
@@ -49,10 +49,9 @@
          <p>This website is about Jacob Collier. Jacob is a multi grammy award winning musician with years of experiance under his belt. dispite being only 25 Jacob has achived more than others have in their entire lifetime. this website will outline jacobs accomplishments as well as his personal history.
          </p>
          <p>I hope you enjoy my webtite</p>
-         <p>I hope you enjoy my webtite</p>
     </section>
   </body>
- 
+  <div style="padding:20px;">
 <footer>
     
     <!-- M2LO4 Demonstrate external, embedded, and inline styles 
