--- a/V4/about.html
+++ b/V4/about.html
@@ -36,7 +36,7 @@
 <p>V1: all web pages have functioning navigation menus. I've added about, accomplishments, and about this website pages as well as custom colors an images. </p>
 <p>V2:added content to albums page, as well as borders to album covers. added content to accomplishments page. </p>
 <p>V3: minor adjustments to syntax of code.</p>
-<p>V4: refined accomplishments and albms page, added html5 video</p>
+<p>V4: refined accomplishments and albms page, added embeded videos</p>
 
 <img src="silly.jpg"class="center" />
 </body>
