--- a/V4/albums.html
+++ b/V4/albums.html
@@ -181,12 +181,15 @@
       </iframe>
 
       <div style="padding:5%;"></div>
-      
-      <h2>FUN FACTS!!!!!</h2>
-      <p>Collier also helped score DreamWorks' 2017 film, The Boss Baby, with composer Hans Zimmer.
-      In July 2018, Collier was one of the surprise guests at Quincy Jones' 85th birthday party celebrations, at the Montreux Jazz Club.
-      </p>
 
+      <h2>FUN FACTS!!!!!</h2>
+      <p>Collier also helped score DreamWorks' 2017 film, The Boss Baby, with composer Hans Zimmer. In July 2018, Collier was one of the surprise guests at Quincy Jones' 85th birthday party celebrations, at the Montreux Jazz Club. Jacob has also arranged and performed the background vocal tracks for three songs in coldplays new album "everyday life". "Cry, Cry, Cry", "Church", and the album song "Everyday Life".
+      </p>
+      <p>Coldplay - Cry Cry Cry (Lyric Video)</p>
+
+      <iframe width="807" height="605" 
+      src="https://www.youtube.com/embed/hKTA4NpZIAQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      </iframe>
     </h3>
 
     </body>
