--- a/V4/aboutjacob.html
+++ b/V4/aboutjacob.html
@@ -32,5 +32,5 @@
     
         <!-- M2LO4 Demonstrate external, embedded, and inline styles 
          I've used an inline style to ajust the font size of my footer text-->
-        <p style="font-size: 0.8em;">This website is unofilliated with Jacob collier and Hanjanga records.</p>
+        <p style="font-size: 0.8em;">This website is unaffiliated with Jacob Collier and Hanjanga records.</p>
     </footer>
