--- a/V4/albums.html
+++ b/V4/albums.html
@@ -200,5 +200,5 @@
     
         <!-- M2LO4 Demonstrate external, embedded, and inline styles 
          I've used an inline style to ajust the font size of my footer text-->
-        <p style="font-size: 1em;">This website is unofilliated with Jacob collier and Hanjanga records.</p>
+        <p style="font-size: 1em;">This website is unaffiliated with Jacob Collier and Hanjanga records.</p>
     </footer>
