--- a/V4/accomplishments.html
+++ b/V4/accomplishments.html
@@ -29,7 +29,7 @@
       <img src="8-string.jpg" alt="8-string" width="50%" height="10%">
        <section1>
            <H2>Humble Beginings</H2>
-        <p>Before he became a multi Grammy award winning artist, Jacob collier was an average kid... Sort of... Jacob collier grew up in a musical home. His mother Susan collier is a violinist, a conductor, and a professor at the Royal Academy of Music's Junior Academy in London. His grandfather was also a violinist that taught at the Royal Academy of Music. In his family Jacob was heavily influenced to seek a career path in the performing arts. In an interview with Jacob collier he said, "We sing Bach chorales together as family – it's just so much fun.".
+        <p>Before he became a multi Grammy award winning artist, Jacob Collier was an average kid... Sort of... Jacob Collier grew up in a musical home. His mother Susan Collier is a violinist, a conductor, and a professor at the Royal Academy of Music's Junior Academy in London. His grandfather was also a violinist that taught at the Royal Academy of Music. In his family Jacob was heavily influenced to seek a career path in the performing arts. In an interview with Jacob collier he said, "We sing Bach chorales together as family – it's just so much fun.".
              </p>
         </section1>
 
@@ -38,7 +38,7 @@
         <img2><img src="sweater.jpg" alt="sweater" width="45%" height="10%"></img2>
         <section2>
             <H2>Starting a Career</H2>
-         <p>In 2011 Jacob began uploading his own musical creations to YouTube. With covers of jazz classics like Stevie wonders “Isn’t She Lovely” and “Don’t you worry ‘Bout a Thing” that astounded musicians around the world. Jacob released these covers around the age of 17, and the music theory, and voice leading that he was executing in these videos was astounding for a person of his age. So astounding it caught the eye of famous jazz musician Quincy jones. In 2013 Quincy offered to fly Jacob out to the Montreux Jazz Festival where He’d meet famous musician Herbie Handcock as well.
+         <p>In 2011 Jacob began uploading his own musical creations to YouTube. With covers of jazz classics like Stevie wonders “Isn’t She Lovely” and “Don’t you worry ‘Bout a Thing” that astounded musicians around the world. Jacob released these covers around the age of 17, and the music theory, and voice leading that he was executing in these videos was astounding for a person of his age. So astounding it caught the eye of famous jazz musician Quincy Jones. In 2013 Quincy offered to fly Jacob out to the Montreux Jazz Festival where He’d meet famous musician Herbie Handcock as well.
          </p>
          </section2>
 
@@ -48,7 +48,7 @@
          
          <section3>
             <H2>Building a Reputation</H2>
-         <p>In 2015 following the release of his first album Jacob collier performed his first live show. It was a “one-man band” situation with Jacob displaying a mastery of an assortment of instruments. Bass, guitar, piano, drums, Jacob did it all. These live shows also featured a unique piece of tech called a harmonizer. This device took Jacobs voice and auto tuned it to a keyboard, so that Jacob could harmonize with himself.
+         <p>In 2015 following the release of his first album Jacob Collier performed his first live show. It was a “one-man band” situation with Jacob displaying a mastery of an assortment of instruments. Bass, guitar, piano, drums, Jacob did it all. These live shows also featured a unique piece of tech called a harmonizer. This device took Jacobs voice and auto tuned it to a keyboard, so that Jacob could harmonize with himself.
          </p>
          </section3>
         
