--- a/V4/index.html
+++ b/V4/index.html
@@ -46,7 +46,7 @@
      </p>
    <section>
      <body>
-         <p>This website is about Jacob Collier. Jacob is a multi grammy award winning musician with years of experiance under his belt. Despite being only 25 Jacob has achived more than others have in their entire lifetime. This website will outline Jacob's accomplishments as well as his personal history.
+         <p>This website is about Jacob Collier. Jacob is a multi grammy award winning musician with years of experience under his belt. Despite being only 25 Jacob has achived more than others have in their entire lifetime. This website will outline Jacob's accomplishments as well as his personal history.
          </p>
          <p>I hope you enjoy my website</p>
     </section>
