--- a/webdesign/v1/index.html
+++ b/webdesign/v1/index.html
@@ -1,6 +1,7 @@
 <!-- By Dominik Biedebach @domobch -->
 
 <link href='styles.css' rel='stylesheet' type='text/css'>
+<link href='mobilestyles.css' rel='stylesheet' type='text/css'>
 <html>
 
   <div class="page">
