--- a/webdesign/mobile/index.html
+++ b/webdesign/mobile/index.html
@@ -1,6 +1,6 @@
 <html>
 
-<head><link rel="stylesheet" href="styles.css" />
+<head><link rel="stylesheet" href="mobilestyles.css" />
 
 </head>
 
@@ -27,7 +27,9 @@
         <li><a href="#3">Blog</a></li>
         <li><a href="#4">About</a></li>
         <li><a href="#5">Contact</a></li>
-        <li class="small"><a href="#6">Facebook</a><a href="#7">Instagram</a></li>
+
+       <!-- <li class="small"><a href="#6">Facebook</a><a href="#7">Instagram</a></li> -->
+
       </ul>
       </nav>
     </div>
