--- a/webdesign/v1/index.html
+++ b/webdesign/v1/index.html
@@ -23,11 +23,9 @@
   <div id="nav-content" class="sticky">
   <nav class="stroke">
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Downloads</a></li>
-      <li><a href="#">More</a></li>
-      <li><a href="#">Nice staff</a></li>
+      <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="budget.html">Budget</a></li>
+      <li><a href="order.html">Order</a></li>
     </ul>
   </nav>
   </div>
