--- a/webdesign/v1/Order.html
+++ b/webdesign/v1/Order.html
@@ -23,7 +23,7 @@
     <div id="nav-content" class="sticky">
       <nav class="stroke">
         <ul>
-          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="budget.html">Budget</a></li>
           <li><a class="active" href="order.html">Order</a></li>
         </ul>
