--- a/webdesign/v1/Order.html
+++ b/webdesign/v1/Order.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <link href='styles.css' rel='stylesheet' type='text/css'>
+  <link href='orderstyles.css' rel='stylesheet' type='text/css'>
 
 </head>
 
