--- a/webdesign/v1/Order.html
+++ b/webdesign/v1/Order.html
@@ -7,7 +7,7 @@
 </head>
 
   <div class="page">
-  <header>Underline Stroke</header>
+  <header>Order Now!</header>
 
   <!-- this is the menu button! -->
   <div id="nav-container">
@@ -24,7 +24,7 @@
       <nav class="stroke">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="budget.html">Budget</a></li>
+          <li><a href="budget.html">Pricing</a></li>
           <li><a class="active" href="order.html">Order</a></li>
         </ul>
       </nav>
