a lot of new stuff

--- a/webdesign/v1/budget.html
+++ b/webdesign/v1/budget.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+  
+  <div id="background">
+    <img src="glossybutton.png" class="stretch" alt="" />
+</div>
+
+
 
 <head>
   <link href='budgetstyles.css' rel='stylesheet' type='text/css'>
