--- a/webdesign/v1/order.html
+++ b/webdesign/v1/order.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 
+
+  <div id="background">
+    <img src="glossybutton.png" class="stretch" alt="" />
+</div>
+
+
 <head>
   <link href='orderstyles.css' rel='stylesheet' type='text/css'>
 
@@ -54,7 +60,7 @@
   </main>
 
 
-  <form method="GET" action="index.html" autocomplete="false" class="firstform" id="firstform">
+  <form method="GET" action="thankyou.html" autocomplete="false" class="firstform" id="firstform">
 	
     <fieldset class="identifying">
       <legend>Lorem Ipsum</legend>
@@ -85,14 +91,12 @@
       </ul>
     </fieldset>
    
-    <fieldset class="submission">
-   
-      <legend>Send It!</legend>
-   
-      <input type="submit" value="Send It"/>
-      <input type="reset" />
 
-    </fieldset>
+      <legend>Send It!</legend>
+      <input type="submit" value="Send It"/>
+      <input type="reset" value="Cancel Order"/>
+
+
     </form>
 
 
