--- a/webdesign/v1/thankyou.html
+++ b/webdesign/v1/thankyou.html
@@ -48,6 +48,9 @@
   </form>
   </div>
 
+  <label for="mytext">Comments: </label>
+  <textarea name="mytext" id="mytext" placeholder="We'd love to hear what you think!"></textarea>	  
+
   </body>
 
 
