--- a/webdesign/v1/order.html
+++ b/webdesign/v1/order.html
@@ -38,7 +38,7 @@
 
   <body>
 
-  <h1>cool website</h1>
+  <h1>Products</h1>
   
   
   <main>
@@ -60,7 +60,7 @@
     
       <ul id="choices">
         <li><label><input name="myradio" id="rad1" value="1" type="radio"> Un-Modded Wii</label></li>
-        <li><label><input name="myradio" id="rad2" value="2" type="radio"> Modded Wii (no storage)</label></li>
+        <li><label><input name="myradio" id="rad2" value="2" type="radio"> Modded Wii</label></li>
         <li><label><input name="myradio" id="rad3" value="3" type="radio"> Modded Wii 120gb</label></li>
         <li><label><input name="myradio" id="rad4" value="4" type="radio"> Modded Wii 256gb</label></li>
       </ul>
