--- a/webdesign/v1/order.html
+++ b/webdesign/v1/order.html
@@ -40,9 +40,9 @@
 
   <h1>Products</h1>
   
-  
+  <form method="get" action="thankyou.html" autocomplete="off" class="firstform" id="firstform">
+
   <main>
-    
 
     <section class="s1">
       <div class="textbox">
@@ -68,8 +68,8 @@
   </main>
 
 
-  <form method="GET" action="thankyou.html" autocomplete="false" class="firstform" id="firstform">
-	
+ 
+
 
 
    
