--- a/webdesign/v1/index.html
+++ b/webdesign/v1/index.html
@@ -40,7 +40,9 @@
 
     <section class="s1">
   
-      <p>Welcome to my website. My name is Garret and my brother and I make custom wiis. over the past year, him and I have collected a variety of old wii hardware from a multitude stores in an effort to make a quality product to sell to others. Our custom wiis are modded with special software alowing people to play over 2,00 different games from many different consoles. We have over 500 games made for the wii, 500 games for the gamecube and over 1,000 retro titles all made playable on the console</p>
+      <p>Welcome to my website. My name is Garret and my brother and I make custom wiis. over the past year, him and I have collected a variety of old wii hardware from a multitude stores in an effort to make a quality product to sell to others. </p>
+        
+        <p>Our custom wiis are modded with special software alowing people to play over 2,00 different games from many different consoles. We have over 500 games made for the wii, 500 games for the gamecube and over 1,000 retro titles all made playable on the console</p>
    
   </section>
     <section class="s2">
@@ -59,7 +61,9 @@
 
 
   </body>
-
+  <footer> 
+    <p style="font-size: 1em;">Garret O'Brien 2022</p>
+</footer>
 
 
 </html>
